--- a/george/playground.ipynb
+++ b/george/playground.ipynb
@@ -9,7 +9,8 @@
     "import numpy as np\n",
     "import sqlite3\n",
     "import psycopg2\n",
-    "import os"
+    "import os\n",
+    "from src.config import DATABASE, USER, PASSWORD, HOST, PORT"
    ],
    "metadata": {
     "collapsed": false,
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def make_csv(query, filename):\n",
@@ -84,11 +85,11 @@
     "    pd.set_option('display.max_columns', None)\n",
     "    # Creating a connection to the database\n",
     "    print(\"creating connection...\")\n",
-    "    con = psycopg2.connect(database=\"mid_term_project\",\n",
-    "                           user=\"lhl_student\",\n",
-    "                           password=\"lhl_student\",\n",
-    "                           host=\"lhl-data-bootcamp.crzjul5qln0e.ca-central-1.rds.amazonaws.com\",\n",
-    "                           port=\"5432\")\n",
+    "    con = psycopg2.connect(database=DATABASE,\n",
+    "                           user=USER,\n",
+    "                           password=PASSWORD,\n",
+    "                           host=HOST,\n",
+    "                           port=PORT)\n",
     "    # creating a cursor object\n",
     "    cur = con.cursor()\n",
     "    # running an sql query\n",
