fixed weather extraction, adding weather for 339 cities for January

--- a/george/playground.ipynb
+++ b/george/playground.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "outputs": [],
    "source": [
+    "import json\n",
+    "from pandas.io.json import json_normalize\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sqlite3\n",
@@ -12,6 +14,104 @@
     "import os\n",
     "from src.config import DATABASE, USER, PASSWORD, HOST, PORT"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [],
+   "source": [
+    "fname = '../data/january_weather.json'"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [],
+   "source": [
+    "with open(fname, 'r') as f:\n",
+    "    file = json.load(f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[{'1': {'00:00': {'windspeedKmph': '19',\n    'visibility': '10',\n    'cloudcover': '52',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '12',\n    'visibility': '10',\n    'cloudcover': '40',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'2': {'00:00': {'windspeedKmph': '11',\n    'visibility': '10',\n    'cloudcover': '8',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '8',\n    'visibility': '10',\n    'cloudcover': '94',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'3': {'00:00': {'windspeedKmph': '6',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '13',\n    'visibility': '10',\n    'cloudcover': '2',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'4': {'00:00': {'windspeedKmph': '5',\n    'visibility': '10',\n    'cloudcover': '11',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '7',\n    'visibility': '10',\n    'cloudcover': '42',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'5': {'00:00': {'windspeedKmph': '10',\n    'visibility': '10',\n    'cloudcover': '77',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '11',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'6': {'00:00': {'windspeedKmph': '12',\n    'visibility': '10',\n    'cloudcover': '6',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '9',\n    'visibility': '10',\n    'cloudcover': '15',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'7': {'00:00': {'windspeedKmph': '24',\n    'visibility': '10',\n    'cloudcover': '61',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '19',\n    'visibility': '2',\n    'cloudcover': '100',\n    'precipMM': '0.3',\n    'totalSnow_cm': '0.0'}}},\n {'8': {'00:00': {'windspeedKmph': '25',\n    'visibility': '9',\n    'cloudcover': '3',\n    'precipMM': '2.1',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '11',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'9': {'00:00': {'windspeedKmph': '6',\n    'visibility': '10',\n    'cloudcover': '8',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '9',\n    'visibility': '10',\n    'cloudcover': '33',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'10': {'00:00': {'windspeedKmph': '19',\n    'visibility': '10',\n    'cloudcover': '44',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '27',\n    'visibility': '10',\n    'cloudcover': '23',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'11': {'00:00': {'windspeedKmph': '30',\n    'visibility': '10',\n    'cloudcover': '89',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '38',\n    'visibility': '10',\n    'cloudcover': '47',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'12': {'00:00': {'windspeedKmph': '33',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '13',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'13': {'00:00': {'windspeedKmph': '9',\n    'visibility': '10',\n    'cloudcover': '5',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '8',\n    'visibility': '10',\n    'cloudcover': '4',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'14': {'00:00': {'windspeedKmph': '13',\n    'visibility': '10',\n    'cloudcover': '13',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '13',\n    'visibility': '10',\n    'cloudcover': '6',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'15': {'00:00': {'windspeedKmph': '13',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.4'},\n   '12:00': {'windspeedKmph': '10',\n    'visibility': '10',\n    'cloudcover': '24',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.4'}}},\n {'16': {'00:00': {'windspeedKmph': '32',\n    'visibility': '0',\n    'cloudcover': '81',\n    'precipMM': '1.1',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '19',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'17': {'00:00': {'windspeedKmph': '10',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '5',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'18': {'00:00': {'windspeedKmph': '11',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '10',\n    'visibility': '10',\n    'cloudcover': '8',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'19': {'00:00': {'windspeedKmph': '18',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '20',\n    'visibility': '10',\n    'cloudcover': '31',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'20': {'00:00': {'windspeedKmph': '19',\n    'visibility': '10',\n    'cloudcover': '90',\n    'precipMM': '0.1',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '24',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'21': {'00:00': {'windspeedKmph': '25',\n    'visibility': '10',\n    'cloudcover': '74',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '18',\n    'visibility': '10',\n    'cloudcover': '100',\n    'precipMM': '0.3',\n    'totalSnow_cm': '0.0'}}},\n {'22': {'00:00': {'windspeedKmph': '19',\n    'visibility': '9',\n    'cloudcover': '5',\n    'precipMM': '1.1',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '32',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'23': {'00:00': {'windspeedKmph': '13',\n    'visibility': '10',\n    'cloudcover': '18',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '6',\n    'visibility': '10',\n    'cloudcover': '6',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'24': {'00:00': {'windspeedKmph': '5',\n    'visibility': '10',\n    'cloudcover': '11',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '4',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'25': {'00:00': {'windspeedKmph': '14',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '19',\n    'visibility': '10',\n    'cloudcover': '2',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'26': {'00:00': {'windspeedKmph': '21',\n    'visibility': '10',\n    'cloudcover': '45',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '20',\n    'visibility': '10',\n    'cloudcover': '97',\n    'precipMM': '0.1',\n    'totalSnow_cm': '0.0'}}},\n {'27': {'00:00': {'windspeedKmph': '10',\n    'visibility': '10',\n    'cloudcover': '100',\n    'precipMM': '1.8',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '17',\n    'visibility': '9',\n    'cloudcover': '14',\n    'precipMM': '0.2',\n    'totalSnow_cm': '0.0'}}},\n {'28': {'00:00': {'windspeedKmph': '14',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '5',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'29': {'00:00': {'windspeedKmph': '6',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '14',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'30': {'00:00': {'windspeedKmph': '9',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '16',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}},\n {'31': {'00:00': {'windspeedKmph': '30',\n    'visibility': '10',\n    'cloudcover': '3',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'},\n   '12:00': {'windspeedKmph': '28',\n    'visibility': '10',\n    'cloudcover': '0',\n    'precipMM': '0.0',\n    'totalSnow_cm': '0.0'}}}]"
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for c in file['cities']:\n",
+    "#     print(c.keys())\n",
+    "file['cities'][0]['Dallas/Fort Worth, TX']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/7g/cgf84kh50nz2xnzmyw4qqrj40000gn/T/ipykernel_12385/2401823869.py:1: FutureWarning: pandas.io.json.json_normalize is deprecated, use pandas.json_normalize instead.\n",
+      "  json_normalize(file['cities'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "                                     New Orleans, LA  \\\n0  [{'1': {'00:00': {'windspeedKmph': '33', 'visi...   \n1                                                NaN   \n2                                                NaN   \n\n                                  Salt Lake City, UT  \\\n0                                                NaN   \n1  [{'1': {'00:00': {'windspeedKmph': '8', 'visib...   \n2                                                NaN   \n\n                               Dallas/Fort Worth, TX  \n0                                                NaN  \n1                                                NaN  \n2  [{'1': {'00:00': {'windspeedKmph': '19', 'visi...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>New Orleans, LA</th>\n      <th>Salt Lake City, UT</th>\n      <th>Dallas/Fort Worth, TX</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>[{'1': {'00:00': {'windspeedKmph': '33', 'visi...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>NaN</td>\n      <td>[{'1': {'00:00': {'windspeedKmph': '8', 'visib...</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>[{'1': {'00:00': {'windspeedKmph': '19', 'visi...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json_normalize(file['cities'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
